@@ -3,6 +3,8 @@
 ========================
 
 - fixed nested objects in JSON schemas
+- improved `keepalive` option in the `REQUEST()` method (it can contain HttpAgent or options for it)
+- updated `RESTBuilder.keepalive()` method by adding `val` argument
 
 ========================
 0.0.14
